--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <script type="text/javascript" src="//delivercanes.com/8808781a21e7d54d6f18cc7d14c464d2/invoke.js"></script><br>
 	<br>
     <div class="video-wrapper">
-        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/20995e509.png">
+        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/00bb61038.jpg">
             <source src="https://cdn.videy.co/al1V0hj71.mp4" type="video/mp4">
         </video>
 		<div style="text-align: center; margin: 30px 0;">
